--- a/EDA - Melbourne House Price Prediction.ipynb
+++ b/EDA - Melbourne House Price Prediction.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Data Analysis Phase\n",
-    "## MAin aim is to understand more about the data\n",
+    "## Main aim is to understand more about the data\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,12 +29,13 @@
     "\n",
     "## Display all the columns of the dataframe\n",
     "\n",
+    "# We only want to see all the columns, but if we provided max_rows, it would have selected all the rows!\n",
     "pd.pandas.set_option('display.max_columns',None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -679,13 +680,15 @@
        "4       WD        Normal     250000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## print the top5 records\n",
+    "## print the top5 records. The previous output says that the train dataset has 1460 (examples) rows and 81 columns (features)\n",
+    "## We will print only the top 5 rows to see how the data looks like\n",
+    "\n",
     "dataset.head()"
    ]
   },
@@ -697,7 +700,7 @@
     "\n",
     "1. Missing Values\n",
     "2. All The Numerical Variables\n",
-    "3. Distribution of the Numerical Variables\n",
+    "3. Distribution of the Numerical Variables (check if its skewed - in that case, we might need to do some transformation.)\n",
     "4. Categorical Variables\n",
     "5. Cardinality of Categorical Variables\n",
     "6. Outliers\n",
@@ -713,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -728,66 +731,74 @@
     {
      "data": {
       "text/plain": [
-       "0    1\n",
+       "0    0\n",
        "1    2\n",
+       "2    1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Lets have a look how data frame works and how can we find nan valuee. This is just to show how isnull works.\n",
+    "\n",
     "df = pd.DataFrame([['ant', np.nan, '10'], ['dog', np.nan, np.nan]])\n",
     "print(df)\n",
-    "df.isna().sum(axis='columns')\n",
-    "#df.sum(axis = 1, skipna = True)"
+    "\n",
+    "#df.isna().sum(axis='columns')\n",
+    "#df.sum(axis = 1, skipna = True)\n",
+    "\n",
+    "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['LotFrontage',\n",
-       " 'Alley',\n",
-       " 'MasVnrType',\n",
-       " 'MasVnrArea',\n",
-       " 'BsmtQual',\n",
-       " 'BsmtCond',\n",
-       " 'BsmtExposure',\n",
-       " 'BsmtFinType1',\n",
-       " 'BsmtFinType2',\n",
-       " 'Electrical',\n",
-       " 'FireplaceQu',\n",
-       " 'GarageType',\n",
-       " 'GarageYrBlt',\n",
-       " 'GarageFinish',\n",
-       " 'GarageQual',\n",
-       " 'GarageCond',\n",
-       " 'PoolQC',\n",
-       " 'Fence',\n",
-       " 'MiscFeature']"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The features are:  ['LotFrontage', 'Alley', 'MasVnrType', 'MasVnrArea', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2', 'Electrical', 'FireplaceQu', 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageQual', 'GarageCond', 'PoolQC', 'Fence', 'MiscFeature'] \n",
+      "\n",
+      "LotFrontage 17.74  % missing values  and total number:  259\n",
+      "Alley 93.77  % missing values  and total number:  1369\n",
+      "MasVnrType 0.55  % missing values  and total number:  8\n",
+      "MasVnrArea 0.55  % missing values  and total number:  8\n",
+      "BsmtQual 2.53  % missing values  and total number:  37\n",
+      "BsmtCond 2.53  % missing values  and total number:  37\n",
+      "BsmtExposure 2.6  % missing values  and total number:  38\n",
+      "BsmtFinType1 2.53  % missing values  and total number:  37\n",
+      "BsmtFinType2 2.6  % missing values  and total number:  38\n",
+      "Electrical 0.07  % missing values  and total number:  1\n",
+      "FireplaceQu 47.26  % missing values  and total number:  690\n",
+      "GarageType 5.55  % missing values  and total number:  81\n",
+      "GarageYrBlt 5.55  % missing values  and total number:  81\n",
+      "GarageFinish 5.55  % missing values  and total number:  81\n",
+      "GarageQual 5.55  % missing values  and total number:  81\n",
+      "GarageCond 5.55  % missing values  and total number:  81\n",
+      "PoolQC 99.52  % missing values  and total number:  1453\n",
+      "Fence 80.75  % missing values  and total number:  1179\n",
+      "MiscFeature 96.3  % missing values  and total number:  1406\n"
+     ]
     }
    ],
    "source": [
     "## Now we will check the percentage of nan values present in each feature\n",
     "\n",
     "## First, make the list of features which has missing values\n",
-    "features_with_na=[features for features in dataset.columns if dataset[features].isnull().sum()>1]\n",
-    "features_with_na\n",
-    "## 2- step print the feature name and the percentage of missing values\n",
-    "# for feature in features_with_na:\n",
-    "#     print(feature, np.round(dataset[feature].isnull().mean(), 4),  ' % missing values')"
+    "#features_with_na=[features for features in dataset.columns if dataset[features].isnull().sum()>1]\n",
+    "features_with_na=[features for features in dataset.columns if dataset[features].isnull().sum()>0]\n",
+    "print('The features are: ' , features_with_na , \"\\n\")\n",
+    "## Second, print the feature name and the percentage of missing values\n",
+    "for feature in features_with_na:\n",
+    "    print(feature, np.round(dataset[feature].isnull().mean() * 100, 2),  ' % missing values', ' and total number: ', dataset[feature].isnull().sum())\n",
+    "    \n",
+    "    "
    ]
   },
   {
