--- a/EDA - Melbourne House Price Prediction - Part 1.ipynb
+++ b/EDA - Melbourne House Price Prediction - Part 1.ipynb
@@ -3234,7 +3234,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Find out the relationship between categorical variable and dependent feature SalesPrice"
+   ]
   }
  ],
  "metadata": {
